@@ -19,13 +19,21 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
+using System.Collections.Generic;
 
 namespace ZincOxide.MiniZinc {
 
-	public class ZincIdent : NameBase {
+	public class ZincIdent : NameBase, IZincIdentContainer {
 
 		public ZincIdent (string name) : base(name) {
 		}
+
+		#region IZincIdentContainer implementation
+		public IEnumerable<ZincIdent> InvolvedIdents () {
+			yield return this;
+		}
+		#endregion
+
 
 	}
 
