@@ -1,5 +1,13 @@
 2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincIdent.cs:
+	* IZincIdentBox.cs:
+	* ZincIdentBoxBase.cs:
+	* ZincIdentContainer.cs:
+	* IZincIdentContainer.cs: 
+
+2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* HeadTail.cs:
 	* IZincItem.cs:
 	* ZincIdent.cs:
